fix width of select on mobile phone

--- a/src/sass/layout/_filters-section.scss
+++ b/src/sass/layout/_filters-section.scss
@@ -11,7 +11,7 @@
 }
 .select {
   width: 150px;
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 360px) {
     width: 200px;
   }
 
